--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixo de Tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-position:center center ;
-            background-repeat: no-repeat;
+            /* Shorthand - background
+            color > image > position > / > size > repeat > attachment
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 700px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +27,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nam minus voluptate perspiciatis, ad dolorum nulla dignissimos tempora enim qui voluptatum, quibusdam, necessitatibus vitae consectetur nihil perferendis molestiae cumque voluptates? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex quibusdam atque adipisci provident ratione qui nobis laboriosam rem et. Ea, accusamus officia cumque adipisci et libero facilis modi at voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque praesentium modi blanditiis officia fugiat, autem necessitatibus. Id eius doloribus magni amet laboriosam, eligendi placeat est assumenda, tenetur maiores dolorum repellendus.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam nam minus voluptate perspiciatis, ad dolorum nulla dignissimos tempora enim qui voluptatum, quibusdam, necessitatibus vitae consectetur nihil perferendis molestiae cumque voluptates? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex quibusdam atque adipisci provident ratione qui nobis laboriosam rem et. Ea, accusamus officia cumque adipisci et libero facilis modi at voluptate. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque praesentium modi blanditiis officia fugiat, autem necessitatibus. Id eius doloribus magni amet laboriosam, eligendi placeat est assumenda, tenetur maiores dolorum repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quos quasi aliquam ab libero! Facere excepturi, suscipit at, cum dignissimos iste eos est ad exercitationem perferendis tenetur saepe accusantium temporibus. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis eaque repellendus quisquam labore amet aut est repellat optio dolor nisi laudantium aspernatur ad iure commodi, illum tenetur maxime cumque laborum! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti non natus vitae rerum, doloribus soluta ratione ex minus quis sunt esse provident modi? Possimus, quidem! Eius vitae at distinctio ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consequatur eum incidunt assumenda nisi ex architecto harum nostrum tenetur similique libero inventore quam labore possimus totam, quae at cupiditate aperiam? Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia nulla non expedita beatae perspiciatis possimus error, ipsam dolor, exercitationem numquam, nobis in asperiores pariatur nemo? Reiciendis distinctio quasi debitis dolorem! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum a qui explicabo sunt. Laudantium delectus quae ut voluptatum inventore provident sunt commodi, consequatur consequuntur fuga ratione, rerum iure in nobis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro suscipit cumque dolores rerum impedit saepe distinctio iusto nobis sint vero est quisquam quae dolorem recusandae atque, nulla nesciunt nisi ab. Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, odit? Odit voluptatibus, deserunt veritatis labore illo, fugit et dolores molestiae consectetur placeat ipsam, accusamus porro corrupti autem consequatur sint ex. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non in consectetur iste perspiciatis, optio totam recusandae, blanditiis itaque sint et soluta qui nemo quibusdam tempora obcaecati expedita maiores cupiditate animi? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis recusandae quaerat numquam aspernatur excepturi omnis inventore nobis nesciunt consequuntur, officia quo aliquid illum in aut autem? Consequuntur eius iusto aspernatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui iure magnam sit amet consequatur. Vel, sapiente mollitia, cum neque nostrum aspernatur fuga recusandae optio, ipsum atque natus laudantium obcaecati! Veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et omnis enim blanditiis dolorum saepe. Molestias voluptate suscipit sunt cumque earum! Exercitationem ullam ducimus eos nesciunt perspiciatis eveniet quis quaerat odit.</p>
     </main>
 </body>
 </html>
