--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -23,7 +23,12 @@
             <input type="month" name="mês" id="imês" value="2022-10">
         </p>
         <p>
-            <label for="idia">Dia da prova</label>
+            <label for="idia">Dia da prova: </label>
+            <input type="date" name="dia" id="idia" value="2022-10-27">
+        </p>
+        <p>
+            <label for="ihora">Horário da prova: </label>
+            <input type="time" name="hora" id="ihora">
         </p>
         <p>
             <input type="submit" value="Enviar">
