--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -7,8 +7,10 @@
     <title>Media Query</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
+    <!-- M N m n . , ; : -->
     <header>
         <h1>Teste de Menu Responsivo</h1>
         <span id="burger" class="material-icons" onclick="clickMenu()">menu</span>
@@ -40,6 +42,14 @@
         </article>
     </main>
     <script>
+        function mudouTamanho() {
+            if (window.innerWidth >= 768) {
+                items.style.display = 'block'
+            } else {
+                items.style.display = 'none'
+            }
+        }
+
         function clickMenu() {
             if (items.style.display == 'block') {
                 items.style.display = 'none'
